-adds a README description - img max-width to avoid overflows

--- a/assets/styles/components/_wp-classes.scss
+++ b/assets/styles/components/_wp-classes.scss
@@ -35,6 +35,13 @@
   @extend .thumbnail;
 }
 
+//Avoiding overflow
+img,
+figure {
+  max-width: 100% !important;
+}
+
+
 .wp-caption-text {
   padding: rem-calc(5) rem-calc(10);
 }
